# rust-geo

./: Cargo.toml  search-index.js
geo/: enum.Geometry.html  index.html  static.COORD_PRECISION.html  struct.Bbox.html  struct.Coordinate.html  struct.GeometryCollection.html  struct.LineString.html  struct.MultiLineString.html  struct.MultiPoint.html  struct.MultiPolygon.html  struct.Point.html  struct.Polygon.html  trait.ToGeo.html
geo-types/src/: point.rs
geo/algorithm/: index.html  sidebar-items.js
geo/algorithm/area/: index.html  trait.Area.html
geo/algorithm/boundingbox/: index.html  trait.BoundingBox.html
geo/algorithm/centroid/: index.html  trait.Centroid.html
geo/algorithm/contains/: index.html  trait.Contains.html
geo/algorithm/distance/: index.html  trait.Distance.html
geo/algorithm/intersects/: index.html  trait.Intersects.html
geo/algorithm/length/: index.html  trait.Length.html
geo/src/algorithm/: map_coords.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.Mul.js  trait.Neg.js  trait.Sub.js
src/: lib.rs  types.rs
src/algorithm/: antipodal.rs  contains.rs  convexhull.rs  distance.rs  extremes.rs  haversine_destination.rs  intersects.rs  mod.rs  polygon_distance_fast_path.rs  simplify.rs  simplify_radial.rs  simplifyvw.rs
src/algorithm/test_fixtures/: norway_reduced.geojson
(+12 files in other folders)
