[package]

name = "geo"
description = "Geospatial primitives and algorithms"
version = "0.6.1"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/rust-geo"
documentation = "https://docs.rs/geo/"
keywords = ["gis", "geo", "geography", "geospatial"]

[dependencies]
num-traits = "0.1"
serde = "1.0"
serde_derive = "1.0"
spade = { git = "https://github.com/Stoeoef/spade.git", branch = "cdt" }

[dev-dependencies]
approx = "0.1.1"
